updateing our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am currently a scientist at a pharmceutical company learing some new skills in programming.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Pickerington, Ohio</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Gaming, comics, and anime</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Software engineer</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Pickerington, Ohio</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>It is a career that I am more interested in and puts me on the path to my ultimate goal.</p>
     </section>
 
     <footer id="footer">
