Updating our details, correcting some spelling

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>I am currently a scientist at a pharmceutical company learing some new skills in programming.</p>
+      <p>I am currently a scientist at a pharmceutical company learning some new skills in programming.</p>
       <h1>Where I'm From</h1>
       <p>Pickerington, Ohio</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Gaming, comics, and anime</p>
+      <p>Gaming, comics, anime, more recently excercise</p>
       <h1>What's your dream job?</h1>
       <p>Software engineer</p>
       <h1>Where do you live?</h1>
